docs/envoy/v1.23.9/_sources/api-v3/config/retry/omit_canary_hosts/v2/omit_canary_hosts.proto.rst.txt
.. _envoy_v3_api_file_envoy/config/retry/omit_canary_hosts/v2/omit_canary_hosts.proto:

Omit Canary Hosts Predicate (proto)
===================================




.. _extension_envoy.retry_host_predicates.omit_canary_hosts:

This extension has the qualified name ``envoy.retry_host_predicates.omit_canary_hosts``

.. note::
  

  This extension is intended to be robust against untrusted downstream traffic. It
  assumes that the upstream is trusted.

.. tip::
  This extension extends and can be used with the following extension category:


  - :ref:`envoy.retry_host_predicates <extension_category_envoy.retry_host_predicates>`



  This extension must be configured with one of the following type URLs:



  - :ref:`type.googleapis.com/envoy.extensions.retry.host.omit_canary_hosts.v3.OmitCanaryHostsPredicate <envoy_v3_api_msg_extensions.retry.host.omit_canary_hosts.v3.OmitCanaryHostsPredicate>`




.. _envoy_v3_api_msg_config.retry.omit_canary_hosts.v2.OmitCanaryHostsPredicate:

config.retry.omit_canary_hosts.v2.OmitCanaryHostsPredicate
----------------------------------------------------------

:repo:`[config.retry.omit_canary_hosts.v2.OmitCanaryHostsPredicate proto] <api/envoy/config/retry/omit_canary_hosts/v2/omit_canary_hosts.proto#L18>`




